ORCHESTRATION/K8S/exercices/12-network-policies/backend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend
  labels:
    app: backend
spec:
  containers:
  - name: backend
    image: busybox
    command: ["/bin/sh", "-c", "sleep 3600"]
