ORCHESTRATION/K8S/exercices/12-network-policies/database-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: database
  labels:
    app: database
spec:
  containers:
  - name: db
    image: nginx
    ports:
    - containerPort: 80
